cabal-version:       2.4
name:                hasql-url
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/shinzui/hasql-url
bug-reports:         https://github.com/shinzui/hasql-url/issues
license:             MIT
license-file:        LICENSE
author:              Nadeem Bitar
maintainer:          Nadeem Bitar <nadeem@gmail.com>
copyright:           2020 Nadeem Bitar
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/shinzui/hasql-url.git

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HasqlUrl

test-suite hasql-url-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hasql-url
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
